# cmake_library_example

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
lib/include/cppLibrary/: library_wrapper.h
lib/src/: library.cpp  library.h  library_wrapper.cpp
test/: CMakeLists.txt
test/src/: testCppLibrary.cpp
